--- a/main.html
+++ b/main.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P o m o d o r o</title>
-</head>
-<body>
+    <head>
+        <link rel="stylesheet" href="css/pomodoro.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>P o m o d o r o</title>
+        <link rel="icon" href="svg/pomodoro.svg">
     
-</body>
+    </head>
+    <body>
+        <div class="flex-header">
+            <div id="logo"><img src="svg/pomodoro.svg"></div>
+            <div> </div>
+        </div><br>
+    </body>
 </html>
