--- a/main.html
+++ b/main.html
@@ -13,5 +13,11 @@
             <div id="logo"><img src="svg/pomodoro.svg"></div>
             <div> </div>
         </div><br>
+        <div class="contador">
+            <div id="minutos">25</div>
+            <div>:</div>
+            <div id="segundos">00</div>
+        </div>
+        <hr>
     </body>
 </html>
