Começo do Kotline e Kotlinx-HTML

--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>P o m o d o r o</title>
     <link rel="icon" href="svg/pomodoro.svg" />
+    <script type="text/javascript" src="timer.js"></script>
   </head>
 
   <body>
@@ -15,9 +16,7 @@
     </div>
     <br />
     <div class="contador">
-      <div id="minutos">25</div>
-      <div>:</div>
-      <div id="segundos">00</div>
+      <div id="time">25:00</div>
     </div>
     <div>
       <div class="controlecontador">
