Reset, Play e Pause implementados e funcionando

--- a/main.html
+++ b/main.html
@@ -20,11 +20,12 @@
     <div>
       <div class="controlecontador">
         <img id="restart" 
-            class="button" 
+            onclick="main.rstClick()"
+            class="button"
             src="svg/restart.svg" />
         <img id="play"
             onclick="main.btnClick()"
-            class="button" 
+            class="button"
             src="svg/play.svg" />
       </div>
     </div>
