basic list and basic shortbreaks

--- a/main.html
+++ b/main.html
@@ -14,9 +14,11 @@
       <div></div>
     </div>
     <br />
+
     <div class="contador">
       <p id="time">25:00</p>
     </div>
+
     <div>
       <div class="controlecontador">
         <img id="restart" 
@@ -29,6 +31,39 @@
             src="svg/play.svg" />
       </div>
     </div>
+
+		<div class="downpart">
+
+      <div class="conteudo">
+				<div class="topo">
+					<input type="text"
+						id="inputNovaTarefa"
+						placeholder="Insira a tarefa aqui"
+					>
+					<img id="btnAddTarefa" 
+            class="button"
+            src="svg/add.svg" />	
+				</div>
+				<div class="listitem"
+					id="inputNovaTarefa"
+					>
+					Item de exemplo
+				</div>
+			</div>
+
+			<div class="breaks">
+				<p>Shortbreaks</p>
+				<div id="shortbreaks">
+					0
+				</div>
+				<p>Longbreaks</p>
+				<div id="longbreaks">
+					0
+				</div>
+			</div>
+
+    </div>
+    
 
     <script src="scripts/kotlin.js"></script>
     <script src="scripts/main.js"></script>
