lista html pronto

--- a/main.html
+++ b/main.html
@@ -44,11 +44,35 @@
             class="button"
             src="svg/add.svg" />	
 				</div>
-				<div class="listitem"
-					id="inputNovaTarefa"
-					>
-					Item de exemplo
+				<div class="listcontainer">
+
+					<div class="listTarefa">
+						<div class="itemContent">
+						Exemplo de Tarefa 1
+						</div>
+						<img id="btnRemoveTarefa" 
+            			class="button"
+            			src="svg/remove.svg" />
+					</div>
+					<div class="listTarefa">
+						<div class="itemContent">
+						Exemplo de Tarefa 2
+						</div>
+						<img id="btnRemoveTarefa" 
+            			class="button"
+            			src="svg/remove.svg" />
+					</div>
+					<div class="listTarefa">
+						<div class="itemContent">
+						Exemplo de Tarefa 3
+						</div>
+						<img id="btnRemoveTarefa" 
+            			class="button"
+            			src="svg/remove.svg" />
+					</div>
+
 				</div>
+				
 			</div>
 
 			<div class="breaks">
