--- a/main.html
+++ b/main.html
@@ -76,14 +76,20 @@
 			</div>
 
 			<div class="breaks">
-				<p>Shortbreaks</p>
-				<div id="shortbreaks">
-					0
+				<div class="breakitem">
+					Shortbreaks
+					<div id="shortbreaks">
+						0
+					</div>
 				</div>
-				<p>Longbreaks</p>
-				<div id="longbreaks">
-					0
+
+				<div class="breakitem">
+					Longbreaks
+					<div id="longbreaks">
+						0
+					</div>
 				</div>
+				
 			</div>
 
     </div>
