--- a/project/main.html
+++ b/project/main.html
@@ -77,6 +77,12 @@
 
 			<div class="breaks">
 				<div class="breakitem">
+					Ciclo
+					<div id="countciclo">
+						#1
+					</div>
+				</div>
+				<div class="breakitem">
 					Shortbreaks
 					<div id="shortbreaks">
 						0
