Lista implementada na main

--- a/project/teste.html
+++ b/project/teste.html
@@ -23,9 +23,9 @@
             			src="svg/add.svg" 
 					/>
 				</div>
-				<div class="listcontainer">
+				<ul class="listcontainer">
 					
-				</div>
+				</ul>
 				
 			</div>
     	</div>
