--- a/project/teste.html
+++ b/project/teste.html
@@ -23,9 +23,8 @@
             			src="svg/add.svg" 
 					/>
 				</div>
-				<ul class="listcontainer">
-					
-				</ul>
+				<div class="listcontainer">
+				</div>
 				
 			</div>
     	</div>
