--- a/project/main.html
+++ b/project/main.html
@@ -7,7 +7,6 @@
     <title>P o m o d o r o</title>
     <link rel="icon" href="svg/pomodoro.svg" />
   </head>
-
   <body>
 	<div id="BarraProgresso">
 		<div id="FocoBar"></div>
@@ -54,7 +53,7 @@
 						Exemplo de Tarefa 1
 						</div>
 						<img class="btnRemoveTarefa"
-						onclick="main.removeListClick()" 
+						onclick="main.removeListClick()"
             			class="button"
             			src="svg/remove.svg" />
 					</div>
@@ -107,6 +106,9 @@
     </div>
     <script src="scripts/kotlin.js"></script>
     <script src="scripts/main.js"></script>
-	
+	 
+	<audio id="player" autoplay="autoplay">
+	<source src="audio/pato.mp3" type="audio/mp3">
+  </audio>
   </body>
 </html>
