--- a/project/main.html
+++ b/project/main.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+	<div id="BarraProgresso">
+		<div id="FocoBar"></div>
+	  </div>
+    <div>
     <div class="flex-header">
       <div id="logo"><img src="svg/pomodoro.svg" /></div>
       <div></div>
@@ -18,8 +22,6 @@
     <div class="contador">
       <p id="time">25:00</p>
     </div>
-
-    <div>
       <div class="controlecontador">
         <img id="restart" 
             onclick="main.rstClick()"
@@ -81,8 +83,6 @@
 			</div>
 
     </div>
-    
-
     <script src="scripts/kotlin.js"></script>
 	<script src="scripts/lista.js"></script>
 	<script src="scripts/main.js"></script>
